Fixed UI scalling on smaller screens

--- a/src/components/ModalEdit/ModalEdit.module.css
+++ b/src/components/ModalEdit/ModalEdit.module.css
@@ -19,7 +19,7 @@
   background-color: var(--white);
   box-shadow: 0px 0px 50px var(--black-shadow);
   border-radius: 15px;
-  width: 600px;
+  width: 400px;
 }
 
 .large-title-modal {
