--- a/src/views/Account/AccountPage.module.css
+++ b/src/views/Account/AccountPage.module.css
@@ -48,14 +48,3 @@ p {
   font-size: 1.5rem;
   margin-bottom: 10px;
 }
-
-
-@media only screen and (max-width: 450px) {
-  .container {
-    padding: 0px 0px;
-  }
-
-  .wrapper {
-    margin-top: 50px
-  }
-}
